--- a/spices/cix-screen.org
+++ b/spices/cix-screen.org
@@ -1,8 +1,11 @@
 # File           : cix-screen.org
 # Created        : <2016-11-04 Fri 22:45:19 GMT>
-# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
+# Modified  : <2017-2-27 Mon 23:31:06 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s   :
 # Short          :
 
 #+OPTIONS: num:nil
+
+[[../README.org::*Index][|≣|]]
+#+TITLE: screen
