--- a/spices/cix-xz.org
+++ b/spices/cix-xz.org
@@ -1,13 +1,13 @@
 # File           : cix-xz.org
 # Created        : <2016-11-04 Fri 22:44:50 GMT>
-# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
+# Modified  : <2017-3-02 Thu 23:34:06 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s   :
 # Short          :
 
 #+OPTIONS: num:nil
 
-
+[[../cix-main.org::*Index][|≣|]]
 #+TITLE: xz
 
 * Index
