--- a/spices/cix-gnu-findutils.org
+++ b/spices/cix-gnu-findutils.org
@@ -1,6 +1,6 @@
 # File           : cix-gnu-findutils.org
 # Created        : <2015-11-17 Tue 22:54:30 GMT>
-# Modified  : <2017-7-04 Tue 20:46:42 BST> sharlatan
+# Modified  : <2017-7-12 Wed 20:40:28 BST> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
@@ -105,6 +105,11 @@ find all setuid files/commands:
 List directories by depth recursevly:
 :    ~$ find ./ -type d -printf "%d %p\n" | sort -rn | cut -d" " -f2
 [[file:./cix-gnu-core-utilities.org::*sort][sort]] [[file:./cix-gnu-core-utilities.org::*cut][cut]]
+**** find-170712001945
+Find all binary/executable files in a directory
+:    ~$ find -type f -executable -exec sh -c "file -i '{}' | grep -q 'x-executable; charset=binary'" \; -print
+[[file::./cix-file.org::*file][file]], [[file:./cix-gnu-grep.org::*grep][grep]]
+
 *** find:see-also
 chflags
 (1), chmod(1), cvs(1), locate(1), whereis(1), which(1), xargs(1),
