--- a/spices/cix-util-linux.org
+++ b/spices/cix-util-linux.org
@@ -1,9 +1,9 @@
 # File          : cix-util-linux.org
 # Created       : <2016-10-14 Wed 23:08:36 GMT>
-# Modified      : <2017-7-21 Fri 00:32:45 BST> sharlatan
+# Modified      : <2017-7-28 Fri 23:55:03 BST> sharlatan
 # Author        : sharlatan
 # Maintainer(s) :
-# Short         :
+# Sinopsis  :
 
 #+OPTIONS: num:nil
 
@@ -28,6 +28,7 @@ contains the fdisk configuration tool and the login program.
 | name        | RPM | DEB | ARCH |
 |-------------+-----+-----+------|
 | utils-linux | +   | +   | +    |
+|-------------+-----+-----+------|
 
 ** Libraries
 |  № | Name            | RPM | DEB | ARCH |
@@ -269,6 +270,345 @@ contains the fdisk configuration tool and the login program.
 *** col::examples
 *** col::files
 *** col::see-also
+# Sinopsis  :
+
+#+OPTIONS: num:nil
+
+#+TITLE: Busybox
+
+|--------------+--------------|
+| *Author*       | Bruce Perens |
+| *Released*     | 1999         |
+| *Contributors* |              |
+| *Source*       | [[https://git.busybox.net/][busybox.git]]  |
+| *Info*         |              |
+|--------------+--------------|
+* Index
+#+BEGIN_EXAMPLE
+    [ () -
+    [[ () -
+    ar () -
+    cp () -
+    dc () -
+    dd () -
+    df () -
+    du () -
+    ed () -
+    hd () -
+    id () -
+    ip () -
+    ln () -
+    ls () -
+    mt () -
+    mv () -
+    nc () -
+    od () -
+    ps () -
+    rm () -
+    rx () -
+    sh () -
+    su () -
+    sv () -
+    tr () -
+    vi () -
+    wc () -
+
+    arp () -
+    ash () -
+    awk () -
+    cal () -
+    cat () -
+    cmp () -
+    cut () -
+    env () -
+    lpd () -
+    lpq () -
+    lpr () -
+    man () -
+    pwd () -
+    rpm () -
+    sed () -
+    seq () -
+    sum () -
+    tac () -
+    tar () -
+    tee () -
+    top () -
+    tty () -
+    who () -
+    yes () -
+
+    beep () -
+    catv () -
+    chat () -
+    chrt () -
+    chvt () -
+    comm () -
+    cpio () -
+    date () -
+    diff () -
+    dnsd () -
+    dpkg () -
+    echo () -
+    expr () -
+    find () -
+    fold () -
+    free () -
+    fsck () -
+    ftpd () -
+    grep () -
+    gzip () -
+    head () -
+    hush () -
+    ifup () -
+    init () -
+    ipcs () -
+    kill () -
+    last () -
+    less () -
+    lzop () -
+    mdev () -
+    mesg () -
+    more () -
+    nice () -
+    ping () -
+    rdev () -
+    sort () -
+    stat () -
+    stty () -
+    sync () -
+    tail () -
+    test () -
+    tftp () -
+    time () -
+    true () -
+    uniq () -
+    wget () -
+    zcat () -
+    zcip () -
+
+    acpid () -
+    blkid () -
+    brctl () -
+    bzcat () -
+    bzip2 () -
+    chgrp () -
+    chmod () -
+    chown () -
+    chpst () -
+    cksum () -
+    clear () -
+    crond () -
+    dmesg () -
+    egrep () -
+    eject () -
+    false () -
+    fbset () -
+    fdisk () -
+    fgrep () -
+    fsync () -
+    fuser () -
+    getty () -
+    httpd () -
+    inetd () -
+    ipcrm () -
+    klogd () -
+    login () -
+    lsmod () -
+    mkdir () -
+    mknod () -
+    mount () -
+    nohup () -
+    patch () -
+    pgrep () -
+    pidof () -
+    ping6 () -
+    pkill () -
+    pscan () -
+    rdate () -
+    reset () -
+    rmdir () -
+    rmmod () -
+    route () -
+    runsv () -
+    sleep () -
+    split () -
+    tftpd () -
+    touch () -
+    uname () -
+    unzip () -
+    vlock () -
+    watch () -
+    which () -
+    xargs () -
+
+    arping () -
+    chattr () -
+    chroot () -
+    depmod () -
+    devmem () -
+    envdir () -
+    expand () -
+    findfs () -
+    ftpget () -
+    ftpput () -
+    getopt () -
+    gunzip () -
+    hdparm () -
+    hostid () -
+    ifdown () -
+    insmod () -
+    ionice () -
+    ipaddr () -
+    ipcalc () -
+    iplink () -
+    iprule () -
+    length () -
+    logger () -
+    lsattr () -
+    md5sum () -
+    mkfifo () -
+    mkswap () -
+    mktemp () -
+    nameif () -
+    nmeter () -
+    openvt () -
+    passwd () -
+    printf () -
+    renice () -
+    resize () -
+    script () -
+    setsid () -
+    svlogd () -
+    swapon () -
+    sysctl () -
+    tcpsvd () -
+    telnet () -
+    udhcpc () -
+    udhcpd () -
+    udpsvd () -
+    umount () -
+    unlzma () -
+    unlzop () -
+    uptime () -
+    usleep () -
+    whoami () -
+
+    adduser () -
+    bunzip2 () -
+    crontab () -
+    cryptpw () -
+    deluser () -
+    dirname () -
+    fdflush () -
+    hexdump () -
+    hwclock () -
+    ifplugd () -
+    install () -
+    iproute () -
+    killall () -
+    linux32 () -
+    linux64 () -
+    linuxrc () -
+    logname () -
+    logread () -
+    losetup () -
+    lzmacat () -
+    lzopcat () -
+    mkdosfs () -
+    netstat () -
+    rtcwake () -
+    setarch () -
+    setfont () -
+    sha1sum () -
+    showkey () -
+    strings () -
+    sulogin () -
+    swapoff () -
+    syslogd () -
+    taskset () -
+    telnetd () -
+    timeout () -
+    ttysize () -
+    vconfig () -
+    volname () -
+
+    addgroup () -
+    adjtimex () -
+    basename () -
+    chpasswd () -
+    delgroup () -
+    dos2unix () -
+    dumpkmap () -
+    fbsplash () -
+    fdformat () -
+    hostname () -
+    ifconfig () -
+    inotifyd () -
+    iptunnel () -
+    kbd_mode () -
+    killall5 () -
+    loadfont () -
+    loadkmap () -
+    makemime () -
+    microcom () -
+    mkpasswd () -
+    modprobe () -
+    nslookup () -
+    printenv () -
+    readlink () -
+    realpath () -
+    rpm2cpio () -
+    runlevel () -
+    runsvdir () -
+    sendmail () -
+    slattach () -
+    unexpand () -
+    unix2dos () -
+    uudecode () -
+    uuencode () -
+    watchdog () -
+
+    deallocvt () -
+    dhcprelay () -
+    envuidgid () -
+    ifenslave () -
+    mkfs.vfat () -
+    reformime () -
+    run-parts () -
+    setuidgid () -
+    sha256sum () -
+    sha512sum () -
+    softlimit () -
+
+    dumpleases () -
+    fakeidentd () -
+    flash_lock () -
+    fsck.minix () -
+    mkfs.minix () -
+    mountpoint () -
+    pivot_root () -
+    popmaildir () -
+    setconsole () -
+    setlogcons () -
+    traceroute () -
+    uncompress () -
+
+    freeramdisk () -
+    raidautorun () -
+    readprofile () -
+    setkeycodes () -
+    switch_root () -
+
+    flash_unlock () -
+    scriptreplay () -
+
+    dnsdomainname () -
+    pipe_progress () -
+
+    start-stop-daemon () -
+#+END_EXAMPLE
+* Referances
 ** colcrt                                                                       :cmd:
 [[Index][⬆]]
 *** olcrt::options
@@ -550,6 +890,15 @@ To protect against multiple run of the script
 
 A *mount* command existed in Version 5 AT&T UNIX
 *** mount::options
+| OPT     | FROM V. | END V. | DESC |
+|---------+---------+--------+------|
+| =-l=      |         |        |      |
+| =-o=      |         |        |      |
+| =-o loop= |         |        |      |
+| =-B=      |         |        |      |
+| =-t=      |         |        |      |
+|---------+---------+--------+------|
+
 *** mount::examples
 **** mount-161120112604
 Nicely printed *mount* table:
@@ -569,14 +918,34 @@ Mount ISO image to the system:
 **** mount-161121225218
 Scratch ram partition for a fast access:
 :    ~# mount -t tmpfs tmpfs /mnt -o size=1024m
+
+**** mount-170728234909
+View all mounted paritions of specific type:
+:    ~$ mount -l -t ext2
+:    ~$ mount -l -t ext4
+
+**** mount-170728235322
+Bind mount points to a new directory:
+:    ~# mount -B /old_mnt /new_mnt
+
+The mountpoint can be binded to a new directory. So that you would be able to
+access the contents of a filesystem via more than one mountpoints at the same
+time.
+
+
 *** mount::files
-#+BEGIN_EXAMPLE
-    /etc/fstab       -  filesystem table
-    /etc/mtab        -  table of mounted filesystems
-    /etc/mtab~       -  lock file
-    /etc/mtab.tmp    -  temporary file
-    /etc/filesystems -  a list of filesystem types to try
-#+END_EXAMPLE
+
+|--------------------------------+-----------------------------------|
+| =/etc/blkid.conf=                |                                   |
+| =/etc/filesystems=               | a list of filesystem types to try |
+| =/etc/fstab=                     | filesystem table                  |
+| =/etc/mtab=                      | table of mounted filesystems      |
+| =/etc/mtab.tmp=                  | temporary file                    |
+| =/etc/mtab~=                     | lock file                         |
+| =/proc/self/mountinfo=           |                                   |
+| =/usr/lib/locale/locale-archive= |                                   |
+|--------------------------------+-----------------------------------|
+
 *** mount::see-also
   mount(2), umount(2), umount(8), fstab(5), findmnt(8), nfs(5), nfsd(8), xfs(5),
   xfs_admin(8), mountd(8), mke2fs(8), tune2fs(8), e2label(8), swapon(8),
